# AFCTUI

./: CLAUDE.md  LICENSE  README.md  afcgui.iss  afcgui.spec  pyproject.toml  rthook_log.py
.github/workflows/: build-windows-exe.yml
src/afctui/: __init__.py  __main__.py  app.py  app.tcss  browse.py  converter.py  gui_app.py  gui_main.py  gui_scrubber.py  player.py  presets.py  scrubber.py  utils.py
