[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "afctui"
version = "0.1.0"
description = "Audio File Converter TUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "textual>=8.0.0",
]

[project.optional-dependencies]
gui = ["pyside6>=6.6"]

[project.scripts]
afctui = "afctui.__main__:main"
afcgui  = "afctui.gui_main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/afctui"]
